@@ -1,3 +1,8 @@
+2008-05-07  Dan Williams  <dcbw@redhat.com>
+
+	* src/applet-dialogs.c
+		- (info_dialog_update): fix for NMIP4Config changes for multiple IPs
+
 2008-05-05  Dan Williams  <dcbw@redhat.com>
 
 	* src/vpn-properties/nm-vpn-properties.c
